samples/_failures_safe/1761042325_b65cfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e499440.c: In function ‘main’:
./samples/SAFE/__tmp_1e499440.c:153:5: error: expected expression at end of input
  153 |     ops.set(&a, 0,
      |     ^~~
./samples/SAFE/__tmp_1e499440.c:153:5: error: too few arguments to function ‘ops.set’
./samples/SAFE/__tmp_1e499440.c:153:5: error: expected declaration or statement at end of input
